# gaussian_cycle

./: .gitignore  LICENSE  Makefile  README.md  meson.build  runlocal.sh
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  prog
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: sanitycheckf
src/: Stack.f08  gauss.f08  main.f08  utility.f08
