project('distributed_bfs', 'fortran')
add_global_arguments('-Werror', language : 'fortran')
add_global_arguments('-Wall', language : 'fortran')
add_global_arguments('-Wextra', language : 'fortran')
executable('prog',
           'src/utility.f08',
           'src/Stack.f08',
           'src/Graph.f08',
           'src/search_routines.f08',
           'src/main.f08')
