project('distributed_bfs', 'fortran')
add_global_arguments('-Werror', language : 'fortran')
add_global_arguments('-Wall', language : 'fortran')
add_global_arguments('-Wextra', language : 'fortran')
executable('prog',
           'src/gauss.f08',
           'src/utility.f08',
           'src/main.f08')
